--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <h2>Car {{ car.model }}</h2>
-  <h4>manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }}</h4>
+  <h4>manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</h4>
   {% if car.drivers %}
     <ul>
     {% for driver in car.drivers.all %}
